align fix

--- a/assets/css/dark_style.css
+++ b/assets/css/dark_style.css
@@ -345,7 +345,7 @@ h2 {
 }
 
 #projects {
-    padding: 50px;
+    padding: 50px 20px;
     background-color: #1f1f1f;
     border-radius: 20px;
 }
