--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,7 @@ h2 {
 }
 
 #projects {
-    padding: 50px;
+    padding: 50px 20px;
     background-color: #f0f0f0;
     border-radius: 20px;
 }
